--- a/css/styleAll.css
+++ b/css/styleAll.css
@@ -20,19 +20,24 @@ body {
     padding: 0;
 }
 
+/*Define o menu flexivel ?*/
 .Menu {
   background-color: #E2FFFC;
   padding-top: .2em;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  display: flex; /*Organiza em linhas*/
+  justify-content: space-between; /* posiciona os itens separados esquerda e outros para a direita*/
+  align-items: center; /*E centraliza os itens de acordo com o menu e seu tamanho.*/
 }
 
+
+/* Vai alinhar a logo verticalmente e centraliza-la no menu*/
 #logo {
   display: flex;
   align-items: center;
 }
 
+
+/*vai definir o tamanho da logo*/
 .imag {
   width: 100px;
   height: 100px;
@@ -41,6 +46,8 @@ body {
 
 }
 
+
+/*Essa parte o chat me "ajudo", site-name, Nesses tantos de código faz com que o texto fique preenchido com o gradiente. */
 .site-name {
   font-size: 60px;
   margin-left: .5em;
@@ -75,7 +82,7 @@ header p {
 }
 
 
-
+/*Os links do menu, alteram suas posições tamanhos cor e ao clicar ter um evento:hover. acho que isso o nome "evento". tambem deixa alinhados verticalmente*/
 .nav-links ul {
   list-style: none;
   margin: 0;
@@ -94,8 +101,6 @@ header p {
 
 }
 
-
-
 .nav-links ul li a {
   text-decoration: none;
   color: black;
@@ -108,6 +113,7 @@ header p {
 }
 
 
+/* vai definir tamanho, largura, altura e sua ocupação no footer e cor.*/
 .Rodape {
   background-color: #E2FFFC;
   width: 100%;
@@ -116,6 +122,7 @@ header p {
   box-sizing: border-box;
 }
 
+/* Vai deixa-los verticalente(um ao lado do outro). defini sua largura de acordo com a borda do footer */
 .Baixo {
   display: flex;
   justify-content: space-between;
@@ -128,6 +135,7 @@ header p {
   font-style: normal;
 }
 
+/*essas duas classes vão definir a largura um do outro para se distanciarem.*/
 #contatos {
   font-size: larger;
   margin-top: 4em;
