--- a/css/styleLogin.css
+++ b/css/styleLogin.css
@@ -1,13 +1,14 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
-    background-color: #b3d4de;
+    background-color: #b3d4de; /*Defini a cor do fundo*/
     display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+    flex-direction: column; /*Os elementtos do body vão estar em veticalmente*/
+    min-height: 100vh; /*O body vai ocupar 100% da tela*/
 }
 
+
+/*Vai centralizar o conteudo do pagina no centro.*/
 main {
     display: flex;
     justify-content: center;
@@ -15,7 +16,7 @@ main {
     flex-grow: 1;
 }
 
-
+/*Vai implementar um fundo branco, dando  seu tamanho, cor, borda e o centralizando.*/
 .login-form {
     background-color: #fff;
     padding: 40px;
@@ -26,22 +27,20 @@ main {
     text-align: center;
 }
 
+/*vai alterar um pouco as posições do conteudo do formulário*/
 .login-form h2 {
     margin-bottom: 20px;
-    font-size: 2em;
-    font-weight: bold;
-    font-family: 'Arial', sans-serif;
+    font-size: 4em;
 }
 
 .login-form label {
-    display: block;
-    text-align: left;
-    margin-left: 6.2em;
-    margin-bottom: 20px;
-    font-weight: bold;
+    font-size: 2em;
+    display: block; /*Vai fazer com que ocupe uma linha inteira*/
+    text-align: left; /* E os alinhe a esquerda*/
+    margin-left: 3.1em; /*move o label*/
 }
 
-
+/*Vai definir o input, seu tamanho, borda, cor argin...*/
 .login-form input[type="email"],
 .login-form input[type="password"] {
     width: 100%;
@@ -53,7 +52,7 @@ main {
     box-sizing: border-box;
 }
 
-
+/*Deixa o botão flexivel(um ao lado do outro), centralizando e colocando uma margim entre eles e a borda do formulário.*/
 .button-container {
     display: flex;
     justify-content: center;
@@ -62,18 +61,19 @@ main {
     margin-bottom: 2em;
 }
 
-
+/*Estiliza o botão, com bordas e cor*/
 .login-button,
 .register-button {
-    background-color: #b3d4de;
+    font-size: 1.5em;
+    background-color: #89B8AA;
     border: none;
     padding: 10px 20px;
     border-radius: 20px;
     cursor: pointer;
-    font-weight: bold;
     transition: background-color 0.3s;
 }
 
+/*Ao passar o cursor sobre os botões, altera a cor.*/
 .login-button:hover,
 .register-button:hover {
     background-color: #5aada3;
