--- a/css/styleQuemSomos.css
+++ b/css/styleQuemSomos.css
@@ -1,27 +1,22 @@
+
+/*Tamanho do "quem somos"*/
 #QS {
     font-size: 65px;
-    font-family: "Kite One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
 }
 
+/*Defini tamanho do 1° textinho*/
 #Text {
     margin: 5em;
     font-size: 20px;
-    font-family: "Kite One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
 }
 
-
+/*Centraliza e tamanho.*/
 main p {
     text-align: center;
     font-size: 20px;
-    font-family: "Kite One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
 }
 
+/*Vai deixar lado a lado os cards centraliza-los, tamanho e margem entre os mesmos.*/
 .profile-container {
     display: flex;
     gap: 40px;
@@ -31,6 +26,7 @@ main p {
     align-items: center;
 }
 
+/*Vai definir um tamanho para os cards,o arredondamento das bordas e a transição ao passar o cursor, e centralizando os textos.*/
 .profile-card {
     background-color: #e0f7e9;
     width: 300px;
@@ -41,10 +37,12 @@ main p {
     transition: transform 0.3s;
 }
 
+/*faz com que o card levante levimente*/
 .profile-card:hover {
     transform: translateY(-10px);
 }
 
+/*faz com que o segundo e terceiro card tenham cores diferentes entre os 3 cards*/
 .profile-card:nth-child(2) {
     background-color: #c9eae1;
 }
@@ -53,6 +51,7 @@ main p {
     background-color: #bddfe8;
 }
 
+/*Daqui pra baixo, será o tamanho da imagem do card, o mudando para ficar redodndo as img. e mechendo nos tamanhos dos nomes e o textinho que tem em baixo*/
 .profile-image {
     width: 120px;
     height: 120px;
@@ -63,18 +62,21 @@ main p {
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
 }
 
+/*altera o tamanho e recorta das imagens*/
 .profile-image img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
+/*altera o tamanho da font, da margem e a cor dos nomes dos cards*/
 .profile-info h3 {
     font-size: 1.4em;
     margin-bottom: 15px;
     color: #333;
 }
 
+/*altera o tamanho e a cor da descrição dos cards*/
 .profile-info p {
     font-size: 1em;
     color: #555;
